Fix styling bug that hid top of archive list on small screens

--- a/client/src/Layout/Archive/archive.css
+++ b/client/src/Layout/Archive/archive.css
@@ -20,7 +20,8 @@
   
   .Header {
     padding-top: 25px;
-    position: fixed;
+    position: sticky;
+    top: 55px;
     width: 100%;
     max-width: 1100px;
     z-index: 320;
@@ -90,7 +91,6 @@
   }
   
   .List {
-    margin-top: 260px;
     display: flex;
     flex-flow: column;
   }
